--- a/UnoChat.Client/UnoChat.Client.Shared/Xaml/Resources.xaml
+++ b/UnoChat.Client/UnoChat.Client.Shared/Xaml/Resources.xaml
@@ -15,6 +15,7 @@
         </ResourceDictionary>
     </ResourceDictionary.ThemeDictionaries>
     <local:StringFormatConverter x:Key="StringFormatConverter" />
+    <local:StringEqualityConverter x:Key="StringEqualityConverter" />
     <DataTemplate x:Key="FromMessageTemplate">
         <Grid>
             <Border CornerRadius="12,12,0,12" Padding="12" HorizontalAlignment="Right" Margin="16,8,0,8" Background="#3671e7">
