--- a/UnoChat.Client/UnoChat.Client.Shared/MainPage.xaml
+++ b/UnoChat.Client/UnoChat.Client.Shared/MainPage.xaml
@@ -2,7 +2,8 @@
     x:Class="UnoChat.Client.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:UnoChat.Client"
+    xmlns:winui="using:Microsoft.UI.Xaml.Controls"
+    xmlns:lottie="using:Microsoft.Toolkit.Uwp.UI.Lottie"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:xaml="using:UnoChat.Client.Xaml"
@@ -43,19 +44,23 @@
             </VisualStateGroup>
         </VisualStateManager.VisualStateGroups>
 
-        <Grid x:Name="SignInGrid" Width="320" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-            </Grid.RowDefinitions>
-            <Image Source="ms-appx:///Assets/UnoPlatformLogo.png" Width="160" Margin="32" />
-            <TextBox Grid.Row="1" PlaceholderText="Name" Text="{Binding Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Margin="4"/>
-            <Button Grid.Row="2" Command="{Binding Connect}" Content="Connect" Margin="4" Padding="16,4" HorizontalAlignment="Center"/>
+        <Grid x:Name="SignInGrid" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <Grid Width="320" Height="320" HorizontalAlignment="Center" VerticalAlignment="Center">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <Image Source="ms-appx:///Assets/UnoPlatformLogo.png" Width="160" Height="160" Margin="32" />
+                <Button Grid.Row="2" Command="{Binding Connect}" Content="Connect" Margin="4" Padding="16,4" HorizontalAlignment="Center"/>
+                <TextBox Grid.Row="1" PlaceholderText="Name" Text="{Binding Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Margin="4"/>
+            </Grid>
         </Grid>
 
-        <Grid x:Name="ConnectingGrid" HorizontalAlignment="Center" VerticalAlignment="Center" Visibility="Collapsed">
-            
+        <Grid x:Name="ConnectingGrid" Width="320" HorizontalAlignment="Center" VerticalAlignment="Center" Visibility="Collapsed">
+            <winui:AnimatedVisualPlayer Margin="32">
+                <lottie:LottieVisualSource UriSource="ms-appx:///Animations/connecting.json" />
+            </winui:AnimatedVisualPlayer>
         </Grid>
 
         <Grid x:Name="ChattingGrid" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Visibility="Collapsed">
