--- a/UnoChat.Client/UnoChat.Client.Shared/Xaml/Resources.xaml
+++ b/UnoChat.Client/UnoChat.Client.Shared/Xaml/Resources.xaml
@@ -8,10 +8,16 @@
         <ResourceDictionary x:Key="Default">
             <SolidColorBrush x:Key="ToMessageBackgroundBrush" Color="#333333" />
             <SolidColorBrush x:Key="ToMessageForegroundBrush" Color="White" />
+            <SolidColorBrush x:Key="CogenityTitleTextBrush" Color="White" />
+            <SolidColorBrush x:Key="CogenitySubTitleTextBrush" Color="#FFC3FF68" />
+            <SolidColorBrush x:Key="CogenityDotBrush" Color="#FFFF6600" />
         </ResourceDictionary>
         <ResourceDictionary x:Key="Light">
             <SolidColorBrush x:Key="ToMessageBackgroundBrush" Color="#ececec" />
             <SolidColorBrush x:Key="ToMessageForegroundBrush" Color="Black" />
+            <SolidColorBrush x:Key="CogenityTitleTextBrush" Color="Black" />
+            <SolidColorBrush x:Key="CogenitySubTitleTextBrush" Color="#FFFF6600" />
+            <SolidColorBrush x:Key="CogenityDotBrush" Color="#FFFF6600" />
         </ResourceDictionary>
     </ResourceDictionary.ThemeDictionaries>
     <local:StringFormatConverter x:Key="StringFormatConverter" />
