Implemented theme changing

--- a/UnoChat.Client/UnoChat.Client.Shared/Xaml/Resources.xaml
+++ b/UnoChat.Client/UnoChat.Client.Shared/Xaml/Resources.xaml
@@ -5,7 +5,7 @@
     xmlns:message="using:UnoChat.Client.Message">
     
     <ResourceDictionary.ThemeDictionaries>
-        <ResourceDictionary x:Key="Default">
+        <ResourceDictionary x:Key="Dark">
             <SolidColorBrush x:Key="ToMessageBackgroundBrush" Color="#333333" />
             <SolidColorBrush x:Key="ToMessageForegroundBrush" Color="White" />
             <SolidColorBrush x:Key="CogenityTitleTextBrush" Color="White" />
