feat: Update ToyCar sample with more content

--- a/UI/ToyCar/ToyCar.Shared/MainPage.xaml
+++ b/UI/ToyCar/ToyCar.Shared/MainPage.xaml
@@ -7,13 +7,36 @@
 	  xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
 	  mc:Ignorable="d">
 
+	<Page.Resources>
+		<!-- BulletPoint ContentTemplate -->
+		<DataTemplate x:Key="BulletPointContentTemplate">
+			<TextBlock Margin="0,5"
+					   FontSize="14"
+					   TextWrapping="Wrap"
+					   FontWeight="Medium"
+					   FontFamily="{StaticResource QuicksandFontFamily}">
+				<Run Text="• "
+					 Foreground="#D97904" />
+				<Run Text="{Binding}" />
+			</TextBlock>
+		</DataTemplate>
+	</Page.Resources>
+
 	<Grid x:Name="MainRoot">
-		<muxc:TwoPaneView Pane1Length="*"
+		<Grid.RowDefinitions>
+			<RowDefinition Height="*" />
+			<RowDefinition Height="400" />
+		</Grid.RowDefinitions>
+
+		<muxc:TwoPaneView Grid.RowSpan="2"
+						  Pane1Length="*"
 						  Pane2Length="*"
-						  MinWideModeWidth="0">
+						  PanePriority="Pane1"
+						  WideModeConfiguration="LeftRight"
+						  TallModeConfiguration="SinglePane">
 			<muxc:TwoPaneView.Resources>
 				<Storyboard x:Name="CarStoryboard">
-					<!-- Car bouncing animation -->
+					<!-- SketchCar bouncing animation -->
 					<DoubleAnimationUsingKeyFrames RepeatBehavior="Forever"
 												   Storyboard.TargetName="SketchCar"
 												   Storyboard.TargetProperty="(UIElement.RenderTransform).(TranslateTransform.Y)">
@@ -50,80 +73,433 @@
 									 RepeatBehavior="Forever"
 									 Storyboard.TargetName="FrontWheel"
 									 Storyboard.TargetProperty="(UIElement.RenderTransform).(RotateTransform.Angle)" />
+
+
+					<!-- Car features panel animation -->
+					<DoubleAnimation From="0"
+									 To="1"
+									 Duration="0:0:2"
+									 Storyboard.TargetName="FeaturesPanel"
+									 Storyboard.TargetProperty="Opacity" />
+				</Storyboard>
+
+				<Storyboard x:Name="SceneStoryboard">
+					<!-- Trees animation -->
+					<DoubleAnimation From="0"
+									 To="-800"
+									 Duration="0:0:5"
+									 RepeatBehavior="Forever"
+									 Storyboard.TargetName="Trees"
+									 Storyboard.TargetProperty="(UIElement.RenderTransform).(TranslateTransform.X)" />
+
+					<!-- Clouds animation -->
+					<DoubleAnimation From="0"
+									 To="-800"
+									 Duration="0:1:0"
+									 RepeatBehavior="Forever"
+									 Storyboard.TargetName="Clouds"
+									 Storyboard.TargetProperty="(UIElement.RenderTransform).(TranslateTransform.X)" />
 				</Storyboard>
 			</muxc:TwoPaneView.Resources>
 
 			<muxc:TwoPaneView.Pane1>
-				<Border Background="#E8C444">
+				<Grid Background="#E8C444">
+					<Grid.RowDefinitions>
+						<RowDefinition Height="Auto" />
+						<RowDefinition Height="*" />
+						<RowDefinition Height="400" />
+					</Grid.RowDefinitions>
+
+					<!-- Left NavBar -->
+					<Image Name="LeftNavBar"
+						   Stretch="Uniform"
+						   ManipulationMode="All"
+						   VerticalAlignment="Top"
+						   HorizontalAlignment="Stretch"
+						   Source="ms-appx:///Assets/left-navbar.png" />
+
+					<!-- Left main content -->
+					<Grid Grid.Row="1"
+						  Grid.RowSpan="2">
+						<Grid.ColumnDefinitions>
+							<ColumnDefinition Width="Auto" />
+							<ColumnDefinition Width="Auto" />
+						</Grid.ColumnDefinitions>
+						<Grid.RowDefinitions>
+							<RowDefinition Height="Auto" />
+							<RowDefinition Height="Auto" />
+							<RowDefinition Height="*" />
+							<RowDefinition Height="Auto" />
+							<RowDefinition Height="Auto" />
+						</Grid.RowDefinitions>
+
+						<!-- Number pane -->
+						<Grid Margin="0,20,10,0">
+							<Rectangle Fill="#121111"
+									   Height="125"
+									   Width="129" />
+							<TextBlock Text="1."
+									   FontSize="96"
+									   Opacity="0.2"
+									   Margin="0,0,0,30"
+									   FontWeight="Light"
+									   Foreground="#F8F8F8"
+									   VerticalAlignment="Bottom"
+									   HorizontalAlignment="Center"
+									   FontFamily="{StaticResource RalewayFontFamily}" />
+						</Grid>
+
+						<!-- Toy car description -->
+						<StackPanel Grid.Row="1"
+									Grid.Column="1"
+									HorizontalAlignment="Left"
+									VerticalAlignment="Center">
+							<TextBlock Text="Retro metal frame toy car"
+									   Margin="10,0,0,10"
+									   FontSize="24"
+									   FontWeight="Bold"
+									   FontFamily="{StaticResource QuicksandFontFamily}" />
+
+							<ContentControl Content="Sagittis, ullamcorper phasellus ut ultrices"
+											ContentTemplate="{StaticResource BulletPointContentTemplate}" />
+
+							<ContentControl Content="Urna sit scelerisque lectus mi"
+											ContentTemplate="{StaticResource BulletPointContentTemplate}" />
+
+							<ContentControl Content="Scelerisque fusce nunc bibendum"
+											ContentTemplate="{StaticResource BulletPointContentTemplate}" />
+						</StackPanel>
+
+						<!-- Toy car price -->
+						<StackPanel Grid.Row="3"
+									Grid.Column="1"
+									Margin="0,0,0,10"
+									Orientation="Horizontal"
+									HorizontalAlignment="Left">
+							<TextBlock Text="Retail"
+									   FontSize="14"
+									   FontWeight="Bold"
+									   Foreground="#2F2A25"
+									   VerticalAlignment="Bottom"
+									   FontFamily="{StaticResource QuicksandFontFamily}" />
+
+							<TextBlock FontWeight="Bold"
+									   Margin="8,0,0,0"
+									   Foreground="#D97904"
+									   VerticalAlignment="Bottom"
+									   FontFamily="{StaticResource QuicksandFontFamily}">
+								<Run Text="$16"
+									 FontSize="18" /><Run Text=".95"
+														  FontSize="14" />
+							</TextBlock>
+						</StackPanel>
+
+						<!-- View details area -->
+						<Grid Grid.Row="4"
+							  Grid.Column="1"
+							  Margin="0,0,0,40"
+							  HorizontalAlignment="Left">
+							<Rectangle Fill="#121111"
+									   Height="40"
+									   Width="180" />
+							<StackPanel Orientation="Horizontal"
+										VerticalAlignment="Center"
+										HorizontalAlignment="Center">
+								<TextBlock Text="VIEW DETAILS"
+										   FontSize="14"
+										   Margin="0,0,4,0"
+										   FontWeight="Bold"
+										   Foreground="#F8F8F8"
+										   FontFamily="{StaticResource QuicksandFontFamily}" />
+
+								<!-- Right Arrow -->
+								<Path Data="M484.14,226.886L306.46,49.202c-5.072-5.072-11.832-7.856-19.04-7.856c-7.216,0-13.972,2.788-19.044,7.856l-16.132,16.136c-5.068,5.064-7.86,11.828-7.86,19.04c0,7.208,2.792,14.2,7.86,19.264L355.9,207.526H26.58C11.732,207.526,0,219.15,0,234.002v22.812c0,14.852,11.732,27.648,26.58,27.648h330.496L252.248,388.926c-5.068,5.072-7.86,11.652-7.86,18.864c0,7.204,2.792,13.88,7.86,18.948l16.132,16.084c5.072,5.072,11.828,7.836,19.044,7.836c7.208,0,13.968-2.8,19.04-7.872l177.68-177.68c5.084-5.088,7.88-11.88,7.86-19.1C492.02,238.762,489.228,231.966,484.14,226.886z"
+									  HorizontalAlignment="Center"
+									  VerticalAlignment="Bottom"
+									  Stretch="Uniform"
+									  Margin="4,0,0,4"
+									  Fill="#F8F8F8"
+									  Width="9" />
+							</StackPanel>
+						</Grid>
+					</Grid>
+
 					<!-- ToyCar -->
 					<Image Name="DragLeftCar"
+						   Grid.Row="2"
 						   Width="220"
 						   Height="120"
 						   Stretch="Fill"
 						   ManipulationMode="All"
 						   HorizontalAlignment="Left"
 						   Source="ms-appx:///Assets/YellowCar.png" />
-
-				</Border>
+				</Grid>
 			</muxc:TwoPaneView.Pane1>
 			<muxc:TwoPaneView.Pane2>
-				<!-- SketchCar -->
-				<Grid x:Name="DragRightCar"
-					  Width="220"
-					  Height="120"
-					  VerticalAlignment="Center"
-					  HorizontalAlignment="Left">
-					<Image x:Name="SketchCar"
-						   Width="220"
-						   Height="120"
-						   Stretch="Fill"
+				<Grid Background="White">
+					<Grid.RowDefinitions>
+						<RowDefinition Height="Auto" />
+						<RowDefinition Height="Auto" />
+						<RowDefinition Height="*" />
+						<RowDefinition Height="Auto" />
+						<RowDefinition Height="400" />
+					</Grid.RowDefinitions>
+
+					<!-- Right NavBar -->
+					<Image Name="RightNavBar"
+						   Stretch="Uniform"
 						   ManipulationMode="All"
-						   HorizontalAlignment="Left"
-						   Source="ms-appx:///Assets/SketchCarWithoutWheels.png">
-						<Image.RenderTransform>
+						   VerticalAlignment="Top"
+						   HorizontalAlignment="Stretch"
+						   Source="ms-appx:///Assets/right-navbar.png" />
+
+					<!-- Right Title -->
+					<TextBlock Grid.Row="1"
+							   Text="Our thrilling toy cars put kids in the driver's seat."
+							   Margin="72,5,0,0"
+							   FontSize="24"
+							   MaxWidth="450"
+							   FontWeight="Normal"
+							   TextWrapping="Wrap"
+							   VerticalAlignment="Bottom"
+							   HorizontalAlignment="Left"
+							   FontFamily="{StaticResource QuicksandFontFamily}" />
+
+					<!-- Mountains -->
+					<Path Grid.Row="3"
+						  Data="M69 93C47.6255 96.1128 11.5 82 0 74V161H737.5V74C705 74 623 127.5 556 127.5C489 127.5 357.5 0.5 286.5 0.5C215.5 0.5 120.5 85.5 69 93Z"
+						  VerticalAlignment="Bottom"
+						  Margin="0,0,0,20"
+						  Stretch="Uniform"
+						  Fill="#F8F8F8" />
+
+					<!-- Trees -->
+					<Grid x:Name="Trees"
+						  Grid.Row="3"
+						  Width="500"
+						  VerticalAlignment="Bottom">
+						<Grid.RenderTransform>
 							<TranslateTransform />
-						</Image.RenderTransform>
-					</Image>
+						</Grid.RenderTransform>
 
-					<Image Name="BackWheel"
-						   Width="50"
-						   Height="50"
-						   Stretch="Fill"
-						   Margin="16,0,0,0"
-						   ManipulationMode="All"
-						   VerticalAlignment="Bottom"
-						   HorizontalAlignment="Left"
-						   RenderTransformOrigin="0.5,0.5"
-						   Source="ms-appx:///Assets/BackWheel.png">
-						<Image.RenderTransform>
-							<RotateTransform />
-						</Image.RenderTransform>
-					</Image>
+						<Image Name="LeftTree"
+							   Width="32"
+							   Stretch="Uniform"
+							   ManipulationMode="All"
+							   HorizontalAlignment="Left"
+							   Source="ms-appx:///Assets/tree-left.png" />
 
-					<Image Name="FrontWheel"
-						   Width="50"
-						   Height="50"
-						   Stretch="Fill"
-						   Margin="0,0,20,0"
+						<Image Name="LeftMiddle"
+							   Width="28"
+							   Margin="100,0,0,0"
+							   Stretch="Uniform"
+							   ManipulationMode="All"
+							   HorizontalAlignment="Left"
+							   Source="ms-appx:///Assets/tree-middle.png" />
+
+						<Image Name="LeftRight"
+							   Width="32"
+							   Stretch="Uniform"
+							   ManipulationMode="All"
+							   HorizontalAlignment="Right"
+							   Source="ms-appx:///Assets/tree-right.png" />
+					</Grid>
+
+					<!-- Clouds -->
+					<Grid x:Name="Clouds"
+						  Grid.Row="3"
+						  Width="500"
+						  VerticalAlignment="Top"
+						  HorizontalAlignment="Left">
+						<Grid.RenderTransform>
+							<TranslateTransform />
+						</Grid.RenderTransform>
+
+						<Image Name="BigCloud"
+							   Width="46"
+							   Margin="40,0,0,0"
+							   Stretch="Uniform"
+							   ManipulationMode="All"
+							   HorizontalAlignment="Left"
+							   Source="ms-appx:///Assets/cloud-big.png" />
+
+						<Image Name="SmallCloud"
+							   Width="28"
+							   Margin="150,0,0,0"
+							   Stretch="Uniform"
+							   ManipulationMode="All"
+							   HorizontalAlignment="Left"
+							   Source="ms-appx:///Assets/cloud.png" />
+					</Grid>
+
+					<!-- Sun -->
+					<Image Name="Sun"
+						   Grid.Row="3"
+						   Height="22"
+						   Margin="0,0,100,0"
+						   Stretch="Uniform"
 						   ManipulationMode="All"
-						   VerticalAlignment="Bottom"
+						   VerticalAlignment="Top"
 						   HorizontalAlignment="Right"
-						   RenderTransformOrigin="0.5,0.5"
-						   Source="ms-appx:///Assets/FrontWheel.png">
-						<Image.RenderTransform>
-							<RotateTransform />
-						</Image.RenderTransform>
-					</Image>
+						   Source="ms-appx:///Assets/Sun.png" />
+
+					<!-- SketchCar -->
+					<Grid x:Name="DragRightCar"
+						  Grid.Row="4"
+						  Width="220"
+						  Height="120"
+						  VerticalAlignment="Center"
+						  HorizontalAlignment="Left">
+						<Image x:Name="SketchCar"
+							   Width="220"
+							   Height="120"
+							   Stretch="Fill"
+							   ManipulationMode="All"
+							   HorizontalAlignment="Left"
+							   Source="ms-appx:///Assets/SketchCarWithoutWheels.png">
+							<Image.RenderTransform>
+								<TranslateTransform />
+							</Image.RenderTransform>
+						</Image>
+
+						<Image Name="BackWheel"
+							   Width="50"
+							   Height="50"
+							   Stretch="Fill"
+							   Margin="16,0,0,0"
+							   ManipulationMode="All"
+							   VerticalAlignment="Bottom"
+							   HorizontalAlignment="Left"
+							   RenderTransformOrigin="0.5,0.5"
+							   Source="ms-appx:///Assets/BackWheel.png">
+							<Image.RenderTransform>
+								<RotateTransform />
+							</Image.RenderTransform>
+						</Image>
+
+						<Image Name="FrontWheel"
+							   Width="50"
+							   Height="50"
+							   Stretch="Fill"
+							   Margin="0,0,20,0"
+							   ManipulationMode="All"
+							   RenderTransformOrigin="0.5,0.5"
+							   VerticalAlignment="Bottom"
+							   HorizontalAlignment="Right"
+							   Source="ms-appx:///Assets/FrontWheel.png">
+							<Image.RenderTransform>
+								<RotateTransform />
+							</Image.RenderTransform>
+						</Image>
+					</Grid>
+
+					<!-- Sketch car features panel -->
+					<Grid x:Name="FeaturesPanel"
+						  Grid.Row="4"
+						  Opacity="0"
+						  Width="398"
+						  Height="242"
+						  HorizontalAlignment="Left">
+						<!-- Headlamp feature details -->
+						<Image x:Name="VectorHeadlamp"
+							   Width="184"
+							   Margin="0,12,0,0"
+							   Stretch="Uniform"
+							   ManipulationMode="All"
+							   VerticalAlignment="Top"
+							   HorizontalAlignment="Right"
+							   Source="ms-appx:///Assets/vector-headlamp.png" />
+
+						<Image x:Name="FeatureHeadlamp"
+							   Width="93"
+							   Margin="110,0,0,0"
+							   Stretch="Uniform"
+							   ManipulationMode="All"
+							   VerticalAlignment="Top"
+							   HorizontalAlignment="Left"
+							   Source="ms-appx:///Assets/feature-card-headlamp.png" />
+
+						<Ellipse Fill="#D97904"
+								 Height="5"
+								 Width="5"
+								 Margin="0,113,0,0"
+								 VerticalAlignment="Top"
+								 HorizontalAlignment="Right" />
+
+						<!-- Window feature details -->
+						<Image x:Name="VectorWindow"
+							   Width="160"
+							   Margin="150,70,0,0"
+							   Stretch="Uniform"
+							   ManipulationMode="All"
+							   VerticalAlignment="Top"
+							   HorizontalAlignment="Left"
+							   Source="ms-appx:///Assets/vector-window.png" />
+
+						<Image x:Name="FeatureWindow"
+							   Width="131"
+							   Margin="0,60,0,0"
+							   Stretch="Uniform"
+							   ManipulationMode="All"
+							   VerticalAlignment="Top"
+							   HorizontalAlignment="Left"
+							   Source="ms-appx:///Assets/feature-card-window.png" />
+
+						<Ellipse Fill="#D97904"
+								 Height="5"
+								 Width="5"
+								 Margin="239,88,0,0"
+								 VerticalAlignment="Top"
+								 HorizontalAlignment="Left" />
+
+						<!-- Battery feature details -->
+						<Image x:Name="VectorBattery"
+							   Width="121"
+							   Margin="165,0,0,20"
+							   Stretch="Uniform"
+							   ManipulationMode="All"
+							   VerticalAlignment="Bottom"
+							   HorizontalAlignment="Left"
+							   Source="ms-appx:///Assets/vector-battery.png" />
+
+						<Image x:Name="FeatureBattery"
+							   Width="122"
+							   Margin="30,0,0,10"
+							   Stretch="Uniform"
+							   ManipulationMode="All"
+							   VerticalAlignment="Bottom"
+							   HorizontalAlignment="Left"
+							   Source="ms-appx:///Assets/feature-card-battery.png" />
+
+						<Ellipse Fill="#D97904"
+								 Height="5"
+								 Width="5"
+								 Margin="284,0,0,98"
+								 VerticalAlignment="Bottom"
+								 HorizontalAlignment="Left" />
+					</Grid>
+
+					<!-- Social network area -->
+					<Image Name="SocialNetWorks"
+						   Grid.RowSpan="5"
+						   Width="38"
+						   Stretch="Uniform"
+						   ManipulationMode="All"
+						   VerticalAlignment="Center"
+						   HorizontalAlignment="Right"
+						   Source="ms-appx:///Assets/SocialNetworks.png" />
 				</Grid>
 			</muxc:TwoPaneView.Pane2>
 		</muxc:TwoPaneView>
 
 		<!-- Rectangle used for ManipulationDelta event -->
 		<Rectangle Name="TouchRectangle"
+				   Grid.Row="1"
 				   Width="220"
 				   Height="120"
 				   Fill="Transparent"
 				   ManipulationMode="All"
+				   VerticalAlignment="Center"
 				   HorizontalAlignment="Left" />
 	</Grid>
 </Page>
