--- a/UI/ToyCar/ToyCar.Shared/App.xaml
+++ b/UI/ToyCar/ToyCar.Shared/App.xaml
@@ -2,9 +2,16 @@
 			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 			 xmlns:local="using:ToyCar">
-	
+
 	<Application.Resources>
-		<XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
+		<ResourceDictionary>
+			<ResourceDictionary.MergedDictionaries>
+				<XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
+			</ResourceDictionary.MergedDictionaries>
+
+			<FontFamily x:Key="QuicksandFontFamily">ms-appx:///Assets/Fonts/Quicksand-VariableFont_wght.ttf#Quicksand</FontFamily>
+			<FontFamily x:Key="RalewayFontFamily">ms-appx:///Assets/Fonts/Raleway-VariableFont_wght.ttf#Raleway</FontFamily>
+		</ResourceDictionary>
 	</Application.Resources>
 
 </Application>
